# int10h

./: Cargo.toml  LICENSE  README.md
assets/: bootsect.s  db.json  style.toml
src/: app.rs  apps.rs  bios.rs  int10h.rs  main.rs  models.rs  observer.rs  rt.rs  terminal.rs  ui.rs
src/apps/: home.rs  pets.rs
