[package]
name = "int10h"
version = "0.1.0"
edition = "2021"
authors = ["PinYu1618 <pycc1618@gmail.com>"]
license = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.18", features = ["toml"] }
termion = "1.5.6"
