[package]
name = "int10h"
version = "0.1.0"
edition = "2021"
authors = ["PinYu1618 <pycc1618@gmail.com>"]
license = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.81"
termion = "1.5.6"
thiserror = "1.0.31"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.rand]
version = "0.8.5"
default-features = false
features = ["std", "std_rng"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tui]
version = "0.18.0"
default-features = false
features = ["termion", "serde"]
